fixed issue with z-index

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ h3 {
   right: -0.2em;
   top: -0.2em;
   color: #e12836;
-  z-index: 1;
+  z-index: 2;
 }
 
 .modal {
